--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  
 }
 
 body{
@@ -11,15 +11,15 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #222;
 }
 
 form{
+  padding: 50px 25px;
   display: flex;
   flex-direction: column;
-  padding: 10px;
-  background: #222;
+  background: #333;
   border-radius: 10px;
-  color: #fff;
 }
 
 input{
