--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,6 @@ form {
   background: none;
   padding: 1rem;
   font-size: 1rem;
-  color: #fff;
 	width: 100%;
 }
 
@@ -247,3 +246,7 @@ data-input:valid~label {
 .sign-up-grid .input-group:nth-child(4) { grid-area: 3 / 2 / 4 / 3; }
 .sign-up-grid .input-group:nth-child(5) { grid-area: 4 / 1 / 5 / 3; }
 .sign-up-grid .input-group:nth-child(6) { grid-area: 5 / 1 / 6 / 3; }
+
+.overlay img{
+  width: 50px;
+}
