--- a/css/register.css
+++ b/css/register.css
@@ -1,3 +1,9 @@
+.form-box {
+  width: 400px;
+  justify-content: space-around;
+  gap: 0;
+}
+
 .sign-up-form {
   display: flex;
   flex-direction: column;
@@ -9,11 +15,45 @@
 
 .sign-up-grid {
   display: grid;
-  width: 70%;
+  width: 80%;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(5, 1fr);
   grid-column-gap: 10px;
-  grid-row-gap: 20px;
+  grid-row-gap: 30px;
+}
+
+input{
+  padding: 0.8rem;
+  font-size: 1rem;
+}
+
+label{
+  padding: 0.8rem;
+  font-size: 1rem;
+}
+
+span{
+  font-size: 0.8rem;
+}
+
+#error, #errorUser{
+  top: 50px;
+}
+
+#verifError{
+  position: absolute;
+  font-size: 0.7rem;
+  color: #d20000;
+  top: 55px;
+  right: 5px;
+
+  &.active{
+    display: block;
+  }
+
+  &.inactive{
+    display: none;
+  }
 }
 
 .input-box:nth-child(3) input,
