--- a/css/common.css
+++ b/css/common.css
@@ -256,51 +256,25 @@ input:valid~span {
   transform: translate(0, 5%);
 }
 
-.login-form {
+.login-form, .reset-password-form {
   position: relative;
+  &.active {
+    display: flex;
+  }
+  &.inactive {
+    display: none;
+  }
 }
 
-#passModal{
-  /* display: none!important; */
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+.forgot-password {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.show {
-  display: block!important;
-}
-
-.hide {
-  display: none!important;
-}
-
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;  
-}
-
-.closeModal {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.closeModal:hover,
-.closeModal:focus {
-  color: black;
-  text-decoration: none;
+#toggle-form:hover {
   cursor: pointer;
+  text-decoration: underline;
 }
 
 @media only screen and (max-width: 800px) {
