Refactor CSS styles and fix input IDs

--- a/css/register.css
+++ b/css/register.css
@@ -37,11 +37,7 @@ span{
   font-size: 0.8rem;
 }
 
-#error, #userError{
-  top: 50px;
-}
-
-#verifError{
+#verifError, #userError, #error, #emailError {
   position: absolute;
   font-size: 0.7rem;
   color: #d20000;
