--- a/css/home.css
+++ b/css/home.css
@@ -1,189 +1,297 @@
-* {
-  margin: 0;
-  padding: 0;
+*, *::before, *::after {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-html, body {
-  height: 100%;
-  width: 100%;
+.academia {
+  background-color: #f5f5f5;
 }
 
 body {
-background: #333;
-color: #fff;
-font-family: 'system-ui', sans-serif;
-display: flex;
-flex-direction: row;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 
-.left-side-panel {
-margin: 10px;
-padding: 5px;
-border-radius: 5px;
-display: flex;
-flex-direction: column;
-justify-content: start;
-height: calc(100% - 20px);
-width: 200px;
-background: rgba(255, 255, 255, 0.1) 0%;
-backdrop-filter: blur(30px);
-& .nav-content, ul {
+body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-height: 100vh;
+  font-family: Lato, Helvetica\ Neue, Helvetica, Arial, sans-serif;
+  font-weight: 300;
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #191919;
+  text-align: left;
+}
+
+.container {
   width: 100%;
-}
-& li {
-  list-style: none;
-  text-align: center;
-  padding: 10px;
-}
-& li:hover {
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 5px; 
-}
-& a{
-  text-align: center;
-  text-decoration: none;
-  color: #fff;
-}
-& hr {
-  margin: 0 20px;
-}
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-top: 0;
+  margin-right: auto;
+  margin-left: auto;
+  background: none;
 }
 
-.nav-title {
-margin: 20px 10px;
-display: flex;
-flex-direction: row;
-gap: 15px;
-justify-content: center;
-& img {
-  width: 2rem;
-}
-& hr {
-  margin: 5px 0;
-}
+.navbar{
+  background: #bebebe;
+  border-bottom: #6938ef 2px solid;
+  padding: 10px 0;
 }
 
-.nav-content {
-margin: 20px 0;
-height: 100%;
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-& ion-icon {
-  font-size: 1.5rem;
+.navbar-top-academia {
+  height: 75px;
+  width: 100%;
+  background: #f2f2ff !important;
+  border-bottom: 1px solid #a598f4;
+  z-index: 1020;
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
 }
-& div:nth-child(2) li {
-  border: 1px solid #fff;
-  border-radius: 10px;
-  margin: 5px 20px;
+
+.contenido-central {
+  padding-top: 0;
+  background: #fff;
 }
+
+.nav-container, .contenido-central {
+  display: flex;
+  align-items: center;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 20px;
+}
+
+.navbar>div, .menu, .menu ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.nav-divider{
+  position: relative;
+}
+
+.menu {
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
+}
+
+.menu :nth-child(1) ul{
+  gap: 15px;
+}
+
+.menu a:hover{
+  color: #6938ef;
+}
+
+
+.nav-item-divider::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 1px;
+    height: 24px;
+    background: rgba(16,24,40,.3);
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%)
+}
+
+.cetisi-community-badge {
+  position: absolute;
+  right: 8px;
+  bottom: 5px;
+  font-weight: 400;
+  font-size: 12px;
+  letter-spacing: 1px;
+  color: #6938ef;
+}
+
+nav figure {
+  position: relative;
+}
+
+nav figure img {
+  height: 60px;
+  object-fit: contain;
+}
+
+nav ion-icon {
+  font-size: 24px;
+}
+
+nav ion-icon:hover {
+  color: #6938ef;
 }
 
 main {
-width: 100%;
-& > * {
-  margin: 10px 0;
-  padding: 5px;
-  display: grid;
-};
+  background: #f9f9f9;
+  padding: 20px 0;
+  margin-top: 75px;
+  min-height: calc(100vh - 81.6px);
 }
 
-.welcome-area {
-display: grid;
-width: 100%;
-& > div {
+.contenido-central {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-}
-
-.level-card {
-background-color: #fff;
-border-radius: 15px;
-width: 100%;
-height: 100%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 20px;
 }
 
-.slider-wrapper {
-position: relative;
-max-width: 40rem;
-margin: 0 auto;
-}
-
-.slider {
-display: flex;
-aspect-ratio: 16/6;
-overflow-x: hidden;
-box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
-border-radius: 15px;
-& img{
-  flex: 1 0 100%;
-  scroll-snap-align: start;
-  object-fit: cover;
-}
-}
-
-.slider-prev {
-column-gap: 1rem;
-position: absolute;
-z-index: 1;
-left: 2rem;
-top: 50%;
-transform: translateY(-50%);
-& a {
+.ver-mas {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  color: black;
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-  background-color: #fff;
-  opacity: 0.5;
-  transition: opacity ease 250ms;
-}
-& a:hover {
-  opacity: 1;
-}
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: flex-end;
+  padding: 5px 20px;
+  font-weight: 400;
+  color: #333;
+  border-radius: 5px;
+  font-size: 16px;
 }
 
-.slider-next {
-column-gap: 1rem;
-position: absolute;
-z-index: 1;
-right: 2rem;
-top: 50%;
-transform: translateY(-50%);
-& a {
+.swiper {
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  overflow: hidden;
+  list-style: none;
+  padding: 0;
+  z-index: 1;
+  display: block;
+}
+
+.swiper {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+
+
+.swiper-horizontal {
+  touch-action: pan-y;
+}
+
+.swiper-android .swiper-slide, .swiper-ios .swiper-slide, .swiper-wrapper {
+  transform: translate3d(0px, 0, 0);
+}
+
+.swiper-backface-hidden .swiper-slide {
+  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.swiper-slide {
+  flex-shrink: 0;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transition-property: transform;
+  display: block;
+}
+.c-card {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  color: black;
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-  background-color: #fff;
-  opacity: 0.5;
-  transition: opacity ease 250ms;
-}
-& a:hover {
-  opacity: 1;
-}
+  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  border-radius: 5px;
+  background-color: #eee;
+  -webkit-box-shadow: 0 2px 4px -2px rgba(144,141,141,.8);
+  box-shadow: 0 2px 4px -2px rgba(144,141,141,.8);
 }
 
-.col-1 { width: 8.33%; }
-.col-2 { width: 16.66%; }
-.col-3 { width: 25%; }
-.col-4 { width: 33.33%; }
-.col-5 { width: 41.66%; }
-.col-6 { width: 50%; }
-.col-7 { width: 58.33%; }
-.col-8 { width: 66.66%; }
-.col-9 { width: 75%; }
-.col-10 { width: 83.33%; }
-.col-11 { width: 91.66%; }
-.col-12 { width: 100%; }
+.c-card .card-img {
+  position: relative;
+  width: 100%;
+  height: 160px;
+  background-size: cover;
+  background-position: center;
+  margin: 0;
+  border-radius: 8px 8px 0 0;
+}
+
+.c-card .card-content {
+  margin-left: 15px;
+  margin-right: 15px;
+  min-height: 105px;
+}
+
+.c-card .card-content .card-title {
+  font-size: 1.25rem;
+  line-height: 27px;
+  font-weight: bold;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
+
+.c-card .card-footer {
+  background-color: rgba(0, 0, 0, 0);
+  border-top: 1px solid rgba(0, 0, 0, 0);
+  padding: 12px, 20px;
+}
+
+.card-footer:last-child {
+  border-radius: 0 0 calc(.25rem - 1px) calc(.25rem - 1px);
+}
+
+.c-card .card-footer .course-rating {
+  white-space: nowrap;
+}
+
+.cetisi-badge {
+  display: inline-block;
+  padding: .25em 10px;
+  font-size: 75%;
+  font-weight: 700;
+  line-height: 1;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 25px;
+  text-transform: uppercase;
+}
+
+.cetisi-badge.badge-aptitude_test {
+  background-color: #333;
+  color: #fff;
+}
+
+.c-card .test-aptitude-info {
+  line-height: 16px;
+  color: #7d7d7d;
+  margin-left: .5rem;
+}
+
+.test-aptitude-info ion-icon {
+  font-size: large;
+}
+
+.ow-card .test-aptitude-info small {
+  font-size: 11.01px;
+}
