--- a/css/home.css
+++ b/css/home.css
@@ -3,6 +3,20 @@
   box-sizing: border-box;
 }
 
+/* Para navegadores modernos */
+.user-select-none {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Para Internet Explorer */
+.unselectable {
+  -ms-user-select: none;
+  user-select: none;
+}
+
 .academia {
   background-color: #f5f5f5;
 }
@@ -139,6 +153,29 @@ nav ion-icon {
 
 nav ion-icon:hover {
   color: #6938ef;
+}
+
+.user-dropdown {
+  position: absolute;
+  right: -6px;
+  top: 45px;
+  border-radius: 5px;
+  border: 1px solid rgba(16,24,40,.3);
+}
+
+.user-dropdown > div:nth-child(2), .user-dropdown > div:nth-child(3) {
+  border-bottom: 1px solid rgba(16,24,40,.3);
+}
+
+.dropdown-arrow {
+  position: absolute;
+  top: -10px;
+  right: 10px;
+  width: 10px;
+  height: 10px;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-bottom: 10px solid #fff;
 }
 
 main {
