--- a/css/home.css
+++ b/css/home.css
@@ -18,7 +18,7 @@
 }
 
 .academia {
-  background-color: #f5f5f5;
+  background-color: #fcfcff;
 }
 
 body {
@@ -89,7 +89,6 @@ body {
 
 .contenido-central {
   padding-top: 20px;
-  background: #fff;
 }
 
 .navbar>div, .menu, .menu ul {
@@ -179,8 +178,9 @@ nav ion-icon:hover {
 }
 
 main {
-  background: #f9f9f9;
+  background: #fcfcff;
   padding: 20px 0;
+  top: 75px;
   margin-top: 75px;
   min-height: calc(100vh - 81.6px);
 }
