--- a/css/course_detail.css
+++ b/css/course_detail.css
@@ -7,3 +7,68 @@
     background-repeat: no-repeat;
     background-size: contain;
 }
+
+.file-upload-panel {
+    border: 2px dashed #ccc;
+    padding: 20px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.file-upload-panel:hover {
+    background-color: #f0f0f0;
+}
+
+.file-upload-input {
+    display: none;
+}
+
+.hidden-button {
+    opacity: 0;
+    position: absolute;
+    left: -9999px;
+}
+
+.video_name {
+    text-align: center;
+    font-size: 1.5em;
+    
+}
+
+.single_video{
+    margin: 2em;
+    /* width: ; */
+    border: black 1px solid;
+
+}
+.videoMiniatura {
+    width: 250px;
+    cursor: pointer;
+}
+
+.videoCompleto {
+    display: none;
+    width: 70%;
+}
+
+.video-popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 999;
+    justify-content: center;
+    align-items: center;
+}
+
+#closeBtn {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    color: white;
+    font-size: 24px;
+    cursor: pointer;
+}
