--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,6 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
@@ -35,13 +37,15 @@ body {
   -ms-flex-direction: column;
   flex-direction: column;
   min-height: 100vh;
-  font-family: Lato, Helvetica\ Neue, Helvetica, Arial, sans-serif;
+  font-family: Lato, Helvetica\Neue, Helvetica, Arial, sans-serif;
   font-weight: 300;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -59,7 +63,7 @@ body {
   background: none;
 }
 
-.navbar{
+.navbar {
   background: #bebebe;
   border-bottom: #6938ef 2px solid;
   padding: 10px 0;
@@ -74,11 +78,12 @@ body {
   position: fixed !important;
   top: 0;
   left: 0;
-  padding-top: .5rem;
-  padding-bottom: .5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
-.nav-container, .contenido-central {
+.nav-container,
+.contenido-central {
   display: flex;
   max-width: 1200px;
   margin-left: auto;
@@ -105,13 +110,15 @@ body {
   padding-top: 20px;
 }
 
-.navbar>div, .menu, .menu ul {
+.navbar > div,
+.menu,
+.menu ul {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-.nav-divider{
+.nav-divider {
   position: relative;
 }
 
@@ -121,24 +128,23 @@ body {
   justify-content: space-between;
 }
 
-.menu :nth-child(1) ul{
+.menu :nth-child(1) ul {
   gap: 15px;
 }
 
-.menu a:hover{
+.menu a:hover {
   color: #6938ef;
 }
 
-
 .nav-item-divider::before {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 1px;
-    height: 24px;
-    background: rgba(16,24,40,.3);
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%)
+  content: "";
+  position: absolute;
+  display: block;
+  width: 1px;
+  height: 24px;
+  background: rgba(16, 24, 40, 0.3);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .cetisi-community-badge {
@@ -173,11 +179,12 @@ nav ion-icon:hover {
   right: -6px;
   top: 45px;
   border-radius: 5px;
-  border: 1px solid rgba(16,24,40,.3);
+  border: 1px solid rgba(16, 24, 40, 0.3);
 }
 
-.user-dropdown > div:nth-child(2), .user-dropdown > div:nth-child(3) {
-  border-bottom: 1px solid rgba(16,24,40,.3);
+.user-dropdown > div:nth-child(2),
+.user-dropdown > div:nth-child(3) {
+  border-bottom: 1px solid rgba(16, 24, 40, 0.3);
 }
 
 .dropdown-arrow {
@@ -197,6 +204,25 @@ main {
   top: 75px;
   margin-top: 75px;
   min-height: calc(100vh - 81.6px);
+}
+
+.contenido-central .aside {
+  padding: 15px;
+  border-radius: 8px;
+  background-color: #fff;
+  position: relative;
+  height: auto;
+  width: inherit;
+  right: auto;
+  overflow: visible;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.contenido-central .courses-container {
+  margin: auto;
+  width: 75%;
 }
 
 .ver-mas {
@@ -229,13 +255,13 @@ main {
   padding-bottom: 30px;
 }
 
-
-
 .swiper-horizontal {
   touch-action: pan-y;
 }
 
-.swiper-android .swiper-slide, .swiper-ios .swiper-slide, .swiper-wrapper {
+.swiper-android .swiper-slide,
+.swiper-ios .swiper-slide,
+.swiper-wrapper {
   transform: translate3d(0px, 0, 0);
 }
 
@@ -265,8 +291,8 @@ main {
   flex-direction: column;
   border-radius: 5px;
   background-color: #eee;
-  -webkit-box-shadow: 0 2px 4px -2px rgba(144,141,141,.8);
-  box-shadow: 0 2px 4px -2px rgba(144,141,141,.8);
+  -webkit-box-shadow: 0 2px 4px -2px rgba(144, 141, 141, 0.8);
+  box-shadow: 0 2px 4px -2px rgba(144, 141, 141, 0.8);
 }
 
 .c-card .card-img {
@@ -300,7 +326,7 @@ main {
 }
 
 .card-footer:last-child {
-  border-radius: 0 0 calc(.25rem - 1px) calc(.25rem - 1px);
+  border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px);
 }
 
 .c-card .card-footer .course-rating {
@@ -309,7 +335,7 @@ main {
 
 .cetisi-badge {
   display: inline-block;
-  padding: .25em 10px;
+  padding: 0.25em 10px;
   font-size: 75%;
   font-weight: 700;
   line-height: 1;
@@ -328,7 +354,7 @@ main {
 .c-card .test-aptitude-info {
   line-height: 16px;
   color: #7d7d7d;
-  margin-left: .5rem;
+  margin-left: 0.5rem;
 }
 
 .test-aptitude-info ion-icon {
@@ -339,6 +365,29 @@ main {
   font-size: 11.01px;
 }
 
+.filters {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.filters input {
+  padding: 2.5px 10px;
+  border-radius: 5px;
+  background: #6938ef;
+  color: #fff;
+}
+
+.filters input:hover {
+  background: #5b2fd6;
+}
+
+.searchBox-input {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #7d7d7d;
+}
+
 @media (min-width: 768px) {
-  
 }
