--- a/css/course_creation.css
+++ b/css/course_creation.css
@@ -34,6 +34,35 @@ main {
   height: 100vh;
 }
 
+.tags-container {
+  display: flex;
+  justify-content: center;
+  width: 60%;
+  flex-wrap: wrap;
+  gap: 10px;
+  max-height: 500px;
+  overflow-y: auto;
+}
+
+input[type="checkbox"].tag {
+  display: none;
+}
+
+input[type="checkbox"].tag + label {
+  /* Estilo cuando el checkbox no está marcado */
+  background-color: #ddd;
+  color: #666;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+input[type="checkbox"].tag:checked + label {
+  /* Estilo cuando el checkbox está marcado */
+  background-color: #6938ef;
+  color: white;
+}
+
+
 .buttons div,
 .buttons button {
   background: #6938ef;
