--- a/css/home.css
+++ b/css/home.css
@@ -389,6 +389,10 @@ main {
   border: 1px solid #7d7d7d;
 }
 
+.tags-list{
+  max-height: 400px;
+}
+
 .footer-container {
   display: flex;
   flex-direction: row;
