--- a/css/output.css
+++ b/css/output.css
@@ -855,6 +855,11 @@ video {
   padding-top: 0.75rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .uppercase {
   text-transform: uppercase;
 }
