--- a/css/output.css
+++ b/css/output.css
@@ -592,10 +592,6 @@ video {
   visibility: visible;
 }
 
-.collapse {
-  visibility: collapse;
-}
-
 .static {
   position: static;
 }
@@ -680,10 +676,6 @@ video {
   display: none;
 }
 
-.max-h-96 {
-  max-height: 24rem;
-}
-
 .w-2\/5 {
   width: 40%;
 }
@@ -696,28 +688,12 @@ video {
   width: 100%;
 }
 
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-3 {
-  width: 0.75rem;
-}
-
 .flex-shrink {
   flex-shrink: 1;
 }
 
-.border-collapse {
-  border-collapse: collapse;
-}
-
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.resize {
-  resize: both;
 }
 
 .columns-md {
@@ -783,6 +759,10 @@ video {
 
 .overflow-y-hidden {
   overflow-y: hidden;
+}
+
+.break-words {
+  overflow-wrap: break-word;
 }
 
 .border {
