--- a/css/modal.css
+++ b/css/modal.css
@@ -6,10 +6,7 @@ html,
 body {
   min-height: 100%;
   height: 100%;
-  background-image: url(http://theartmad.com/wp-content/uploads/Dark-Grey-Texture-Wallpaper-5.jpg);
-  background-size: cover;
-  background-position: top center;
-  font-family: helvetica neue, helvetica, arial, sans-serif;
+  font-family: 'latoregular', sans-serif;
   font-weight: 200;
   &.modal-active {
     overflow: hidden;
@@ -35,7 +32,7 @@ body {
         animation: modalFadeIn 0.5s 0.8s cubic-bezier(0.165, 0.84, 0.44, 1)
           forwards;
         h2,
-        p {
+        form {
           opacity: 0;
           position: relative;
           animation: modalContentFadeIn 0.5s 1s
@@ -57,7 +54,7 @@ body {
           animation: modalFadeOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1)
             forwards;
           h2,
-          p {
+          form, form * {
             animation: modalContentFadeOut 0.5s
               cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
           }
@@ -90,7 +87,7 @@ body {
       line-height: 25px;
       margin-bottom: 15px;
     }
-    p {
+    form {
       font-size: 18px;
       line-height: 22px;
     }
@@ -100,12 +97,13 @@ body {
       left: 0;
       height: 100%;
       width: 100%;
+      z-index: -1;
       border-radius: 3px;
       rect {
         stroke: #fff;
         stroke-width: 2px;
-        stroke-dasharray: 778;
-        stroke-dashoffset: 778;
+        stroke-dasharray: 2000;
+        stroke-dashoffset: 2000;
       }
     }
   }
@@ -366,7 +364,7 @@ body {
 
 @keyframes sketchIn {
   0% {
-    stroke-dashoffset: 778;
+    stroke-dashoffset: 2000;
   }
   100% {
     stroke-dashoffset: 0;
@@ -378,7 +376,7 @@ body {
     stroke-dashoffset: 0;
   }
   100% {
-    stroke-dashoffset: 778;
+    stroke-dashoffset: 1000;
   }
 }
 
