--- a/css/output.css
+++ b/css/output.css
@@ -616,6 +616,10 @@ video {
   z-index: 10;
 }
 
+.z-40 {
+  z-index: 40;
+}
+
 .float-left {
   float: left;
 }
@@ -654,6 +658,10 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .block {
