--- a/css/course_detail.css
+++ b/css/course_detail.css
@@ -39,7 +39,7 @@
   padding: 10px 20px;
 }
 
-.modal button{
+#subm-Modal {
   padding: 10px 20px;
   user-select: none;
   background: #6938ef;
@@ -49,6 +49,22 @@
   &:hover {
     background: #4f1cd7;
   }
+}
+
+.lesson-card {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  border-radius: 5px;
+  background-color: #eee;
+  -webkit-box-shadow: 0 2px 4px -2px rgba(144, 141, 141, 0.8);
+  box-shadow: 0 2px 4px -2px rgba(144, 141, 141, 0.8);
 }
 
 .file-upload-panel {
