--- a/css/common.css
+++ b/css/common.css
@@ -18,12 +18,14 @@ body {
 body {
   z-index: 1;
   font-family: "Lato", sans-serif;
-  background: #333;
-  color: white;
-  /* background-image: url("https://images.unsplash.com/photo-1705448082121-dd6888a685d4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
-  background-size: cover; */
+  background-image: url("https://images.unsplash.com/photo-1705448082121-dd6888a685d4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-size: cover;
   display: flex;
   justify-content: end;
+}
+
+.logo {
+  width: 200px;
 }
 
 .change-form {
@@ -112,7 +114,7 @@ body {
   align-items: center;
   gap: 2em;
   height: 100%;
-  width: 400px;
+  width: 500px;
   background: linear-gradient(
     180deg,
     rgba(255, 255, 255, 0.1) 0%,
@@ -146,10 +148,8 @@ input {
   border-radius: 0 10px 10px 0;
   background: none;
   padding: 1rem;
-  font-size: 1.2rem;
   transition: transform 500ms;
   width: 100%;
-  color: #fff;
 }
 
 label {
@@ -166,8 +166,10 @@ input:focus {
 span {
   display: block;
   font-weight: bold;
+  font-size: 0.8rem;
   position: absolute;
-  left: 60px;
+  top: 5px;
+  left: 65px;
   transform: translateY(0.85rem);
   transition: transform 500ms;
 }
@@ -281,6 +283,7 @@ input:valid ~ span {
   }
 
   .form-box {
+    gap: 50px;
     height: fit-content;
     padding: 40px 0;
     border-radius: 10px;
@@ -295,6 +298,7 @@ input:valid ~ span {
   .form-box {
     margin: 0;
     height: 100%;
+    width: 100%;
     padding: 0 10px;
     border-radius: 0;
     backdrop-filter: blur(10px);
