--- a/css/profile.css
+++ b/css/profile.css
@@ -1,24 +1,64 @@
 .slctImg {
-    margin-left: 25px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-  
-.slctImg button {
-    padding: 4px 15px;
-    border-radius: 5px;
-    background: #6938ef;
-    color: #fff;
-}
-  
-.slctImg button:hover {
-    background: #5b2fd6;
+  margin-left: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.button{
-    padding: 6px 20px;
+.slctImg button {
+  padding: 4px 15px;
+  border-radius: 5px;
+  background: #6938ef;
+  color: #fff;
+}
+
+.slctImg button:hover {
+  background: #5b2fd6;
+}
+
+.button {
+  padding: 6px 20px;
+  border-radius: 5px;
+  background: #6938ef;
+  color: #fff;
+}
+
+.user-info-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+}
+
+.user-info-container :nth-child(1) {
+  grid-area: 1 / 1 / 2 / 2;
+}
+.user-info-container :nth-child(2) {
+  grid-area: 1 / 2 / 2 / 3;
+}
+.user-info-container :nth-child(3) {
+  grid-area: 2 / 1 / 3 / 3;
+}
+.user-info-container :nth-child(4) {
+  grid-area: 3 / 1 / 4 / 2;
+}
+.user-info-container :nth-child(5) {
+  grid-area: 3 / 2 / 4 / 3;
+}
+
+.info-area {
+  display: flex;
+  flex-direction: column;
+
+  & label {
+    font-weight: 500;
+  }
+
+  & input {
+    padding: 5px;
     border-radius: 5px;
-    background: #6938ef;
-    color: #fff;
+    border: 1px solid #ccc;
+    margin-top: 5px;
+  }
 }
