Fix button width in course_creation.css and add items-center class in course_creation.php

--- a/css/course_creation.css
+++ b/css/course_creation.css
@@ -65,6 +65,7 @@ input[type="checkbox"].tag:checked + label {
 
 .buttons div,
 .buttons button {
+  width: fit-content;
   background: #6938ef;
   user-select: none;
   border-radius: 5px;
