--- a/css/common.css
+++ b/css/common.css
@@ -112,6 +112,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  justify-content: space-around;
   gap: 2em;
   height: 100%;
   width: 500px;
