Refactor CSS styles in output.css, common.css, and course_creation.css files

--- a/css/common.css
+++ b/css/common.css
@@ -261,7 +261,7 @@ input:valid ~ span {
 .forgot-password {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 #toggle-form:hover {
